--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -27,41 +27,6 @@ development:
         # The time in seconds that Moped should wait before retrying an
         # operation on failure. (default: 1)
         # retry_interval: 1
-  # Configure Mongoid specific options. (optional)
-  options:
-    # Enable the identity map, needed for eager loading. (default: false)
-    # identity_map_enabled: false
-
-    # Includes the root model name in json serialization. (default: false)
-    # include_root_in_json: false
-
-    # Include the _type field in serializaion. (default: false)
-    # include_type_for_serialization: false
-
-    # Preload all models in development, needed when models use
-    # inheritance. (default: false)
-    # preload_models: false
-
-    # Protect id and type from mass assignment. (default: true)
-    # protect_sensitive_fields: true
-
-    # Raise an error when performing a #find and the document is not found.
-    # (default: true)
-    raise_not_found_error: false
-
-    # Raise an error when defining a scope with the same name as an
-    # existing method. (default: false)
-    # scope_overwrite_exception: false
-
-    # Skip the database version check, used when connecting to a db without
-    # admin access. (default: false)
-    # skip_version_check: false
-
-    # User Active Support's time zone in conversions. (default: true)
-    # use_activesupport_time_zone: true
-
-    # Ensure all times are UTC in the app side. (default: false)
-    # use_utc: false
 test:
   sessions:
     default:
@@ -76,7 +41,7 @@ test:
         retry_interval: 0
         
 production:
-  clients:
+  sessions:
     default:
      # The standard MongoDB connection URI allows for easy
      # replica set connection setup.
