--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,6 +1,6 @@
 development:
   # Configure available database sessions. (required)
-  sessions:
+  clients:
     # Defines the default session. (required)
     default:
       # Defines the name of the default database that Mongoid can connect to.
@@ -28,7 +28,7 @@ development:
         # operation on failure. (default: 1)
         # retry_interval: 1
 test:
-  sessions:
+  clients:
     default:
       database: rails4_mongoid_test
       hosts:
@@ -41,7 +41,7 @@ test:
         retry_interval: 0
         
 production:
-  sessions:
+  clients:
     default:
      # The standard MongoDB connection URI allows for easy
      # replica set connection setup.
